# GBC_1stAssign

./: .ICEauthority  .Xauthority  .bash_history  .gitconfig  .viminfo  .xsession-errors  .xsession-errors.old  BinaryOp.cpp  BinaryOp.h  BraketOp.cpp  BraketOp.h  Calculator.cpp  Calculator.h  Data.cpp  Data.h  Div.cpp  Div.h  FloatElement.cpp  FloatElement.h  IntElement.cpp  IntElement.h  Main.cpp  Minus.cpp  Minus.h  Mod.cpp  Mod.h  Mul.cpp  Mul.h  Op.cpp  Op.h  Parser.cpp  Parser.h  Plus.cpp  Plus.h  Postfix.cpp  Postfix.h  README.md  RawElement.cpp  RawElement.h  test.txt
.cache/: event-sound-cache.tdb.f0b8fa19a0f044cc8fa1ea07519eaa1f.x86_64-pc-linux-gnu  zeitgeist-vacuum.stamp
.cache/fontconfig/: 0bd3dc0958fa2205aaaa8ebb13e2872b-le64.cache-6  3f7329c5293ffd510edef78f73874cfd-le64.cache-6  7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-6  d589a48862398ed80a3d6066f4f56f4c-le64.cache-6
.cache/logrotate/: status
.cache/mediascanner-2.0/: mediastore.db
.cache/url-dispatcher/: urls-1.db  urls-1.db-shm  urls-1.db-wal
.cache/wallpaper/: 0_5_1064_540_792beab7550410d531e55f95b449f135  0_5_904_607_792beab7550410d531e55f95b449f135
.config/dconf/: user
.config/gtk-3.0/: bookmarks
.config/ibus/bus/: f0b8fa19a0f044cc8fa1ea07519eaa1f-unix-0
.config/libaccounts-glib/: accounts.db
.config/nautilus/: desktop-metadata
.config/pulse/: cookie
.config/totem/: state.ini
.local/share/: gsettings-data-convert  recently-used.xbel  session_migration-ubuntu
.local/share/gnome-software/: ubuntu-reviews.db
.local/share/gvfs-metadata/: home  root
.local/share/icc/: edid-287ee3a39ce63b8fc7918f6c54ad0d94.icc  edid-41ba73634921934bb132463f61b80d2f.icc  edid-5045cde758e6d5ef0e107a73d7abf16c.icc
.local/share/keyrings/: login.keyring  user.keystore
.local/share/zeitgeist/: activity.sqlite  activity.sqlite-shm  activity.sqlite-wal
.mozilla/firefox/: profiles.ini
.mozilla/firefox/Crash Reports/: InstallTime20170612122310  InstallTime20171129230835
.mozilla/firefox/wwvtn038.default/: SiteSecurityServiceState.txt  addonStartup.json.lz4  addons.json  cert8.db  cookies.sqlite  cookies.sqlite-shm  cookies.sqlite-wal  extensions.json  favicons.sqlite-shm  favicons.sqlite-wal  formhistory.sqlite  key3.db  kinto.sqlite  lock  mimeTypes.rdf  places.sqlite-shm  places.sqlite-wal  prefs.js  secmod.db  (+8 more)
.vim/: .netrwhist
ASD/Bye/: Bye.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  bye  cmake_install.cmake
ASD/greet/: CMakeCache.txt  CMakeLists.txt  Hello.cpp  Makefile  cmake_install.cmake  hello  hello!
src/: CMakeCache.txt  CMakeLists.txt  Makefile  calculator.cpp  cmake_install.cmake  main.cpp
src/calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  Data.cpp  Data.h  Makefile  cmake_install.cmake
src/calculator/operand/: CMakeLists.txt  FloatElement.cpp  FloatElement.h  IntElement.cpp  IntElement.h  Makefile  RawElement.cpp  RawElement.h  cmake_install.cmake
src/calculator/operator/: BinaryOp.cpp  BinaryOp.h  BraketOp.cpp  BraketOp.h  CMakeLists.txt  Cos.cpp  Cos.h  Div.cpp  Div.h  Exp.cpp  Exp.h  Makefile  Minus.cpp  Minus.h  Mod.cpp  Mod.h  Mul.cpp  Mul.h  Op.cpp  Op.h  Plus.cpp  Plus.h  Sin.cpp  Sin.h  UnaryOp.cpp  UnaryOp.h  cmake_install.cmake  op.cpp  op.h
src/calculator/parser/: CMakeLists.txt  Infix.cpp  Infix.h  Makefile  Parser.cpp  Parser.h  Postfix.cpp  Postfix.h  Prefix.cpp  cmake_install.cmake
(+866 files in other folders)
