add_library(operator op.cpp)
add_library(operator BinaryOp.cpp)
add_library(operator BraketOp.cpp)
add_library(operator Plus.cpp)
add_library(operator Minus.cpp)
add_library(operator Mul.cpp)
add_library(operator Div.cpp)
add_library(operator Mod.cpp)
add_executable(operation op.cpp)
add_executable(binary BinaryOp.cpp)
add_executable(bracket BraketOp.cpp)
add_executable(plus Plus.cpp)
add_executable(minus Minus.cpp)
add_executable(multiple Mul.cpp)
add_executable(div Div.cpp)
add_executable(mod Mod.cpp)
