CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(calculator)
include_directories(../ ../parser ../operand)
add_library(operator STATIC Op.cpp BraketOp.cpp UnaryOp.cpp BinaryOp.cpp Div.cpp Plus.cpp Minus.cpp Mul.cpp Mod.cpp Exp.cpp Sin.cpp Cos.cpp)
TARGET_LINK_LIBRARIES(operator calculator parser operand)
#TARGET_COMPILE_OPTIONS(cal.out PUBLIC -g -Wall)
SET(CMAKE_VERBOSE_MAKEFILE true)
